# projet-7-model

./: .flake8  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml
model/: feature_engineering_completed.py  lightgbm_with_simple_features.py  model_tuning.py
